--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "body-parser": "^1.19.2",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "mongoose": "^6.2.5"
+    "firebase": "^9.6.8",
+    "fs": "^0.0.1-security",
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^6.2.5",
+    "mongoose-gridfs": "^1.3.0",
+    "multer": "^1.4.4",
+    "path": "^0.12.7"
   }
 }
